# showcase

./: .buildpacks  .env  Procfile  README.md  pb_schema.json
.github/workflows/: vercel-preview.yaml
backend/: .dockerignore  .gitignore  Dockerfile  Procfile  config.py  docker-compose.yaml  pyproject.toml  settings.toml
backend/podium/: __init__.py  config.py  constants.py  main.py
backend/podium/db/: __init__.py  db.py  event.py  project.py  referral.py  user.py
backend/podium/routers/: auth.py  events.py  projects.py  users.py
backend/showcase/: __init__.py  auth.py  config.py  main.py
backend/showcase/db/: __init__.py  db.py  event.py  project.py  user.py
backend/showcase/routers/: auth.py  events.py  projects.py  users.py
bruno-api/: Create event.bru  Get events.bru  bruno.json
frontend/: .env  .prettierignore  openapi-ts.config.ts  package-lock.json  package.json  pb_schema.json  svelte.config.js  tailwind.config.js  tsconfig.json
frontend/src/: app.css  app.html  hooks.client.ts
frontend/src/lib/: apiErrorCheck.ts  consts.ts  index.ts  misc.ts  stores.ts  themes.ts  user.svelte.ts
frontend/src/lib/api/: client.svelte.ts  client.ts  types.ts
frontend/src/lib/client/: sdk.gen.ts  types.gen.ts
frontend/src/lib/components/: AttendEvent.svelte  CheckAuth.svelte  CheckLogin.svelte  (+9 more)
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/lib/: pocketbase.js
src/lib/components/: CheckLogin.svelte  CreateEvent.svelte  CreateProject.svelte  UserAuth.svelte
src/routes/: +page.svelte
src/routes/login/: +page.svelte
(+15 files in other folders)
